--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </button>
             <div class="user_account">
                 <div class="user_photo">
-                    <img src="src/mycat.jpg" alt="Фото пользователя">
+                    <img src="../src/mycat.jpg" alt="Фото пользователя">
                 </div>
                 <div class="user_info">
                     <div class="user_name">
