--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="my_message">
                     <div class="content_of_message">
-                        Доброе утро, Персик!
+                        Доброе утро, Персик!!
                     </div>
                     <div class="time_and_check">
                         <div class="time_of_message">
