--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
             form.addEventListener('submit', handleSubmit.bind());
             form.addEventListener('key-press', handleKeyPress.bind());
 
+            const getMessages = JSON.parse(localStorage.getItem("db_messages"));
+            getMessages.forEach((newMessage) => {
+                messageBuilder(newMessage);
+            });
+
             function handleSubmit (event) {
                 event.preventDefault();
                 let now = new Date();
