deploy: d7f9a7408e5a553d0a89a8bf0b9c3eaea9a38477

--- a/chat_list.html
+++ b/chat_list.html
@@ -5,7 +5,7 @@
         <title>Chat list</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    </head>
+    <link href="chat_list/../style.css" rel="stylesheet"></head>
     <body>
         <div class="chats_list">
             <nav class="chat_head">
@@ -119,5 +119,5 @@
                 <i class="material-icons">edit</i>
             </div>
         </div>
-    </body>
+    <script type="text/javascript" src="chat_list/../bundle.js"></script></body>
 </html>
