deploy: cde13bb42eae5909ff710dd07068c06b1e0ea527

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <title>Send a message</title>
         <link rel="stylesheet" href="src/index.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="index/../style.css" rel="stylesheet"></head>
     <body>
         <div class="chat_content">
@@ -36,7 +36,7 @@
                 </div>
             </nav>
 
-            <form class="form" action="/">
+            
                 <div class="messages">
                     <div class="opponent_message">
                         <div class="content_of_message">
@@ -60,13 +60,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="text_field">
-                    <input class="form-input" name="message-text" placeholder="Сообщение" type="text">
-                    <button class="attach">
-                        <i class="material-icons">attachment</i>
-                    </button>
-                </div>
-            </form>
+                <form class="form" action="/">
+                    <div class="text_field">
+                        <input class="form-input" name="message-text" placeholder="Сообщение" type="text">
+                        <div class="attach">
+                            <i class="material-icons">attachment</i>
+                        </div>
+                    </div>
+                </form>
         </div>
 
             
