--- a/chat_list.html
+++ b/chat_list.html
@@ -3,8 +3,8 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Chat list</title>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="chat_list/../style.css" rel="stylesheet"></head>
     <body>
         <div class="chats_list">
